--- a/public/events.html
+++ b/public/events.html
@@ -1006,7 +1006,11 @@
                 });
                 const result = await response.json();
                 if (!response.ok) {
-                    throw new Error(result.detail || 'Ошибка при отправке ставки.');
+                    if (response.status === 409) {
+                        throw new Error('Вы уже участвуете в этом событии!');
+                    } else {
+                        throw new Error(result.detail || 'Ошибка при отправке ставки.');
+                    }
                 }
 
                 tg.showAlert('Ваша ставка принята!');
