--- a/public/admin.html
+++ b/public/admin.html
@@ -701,7 +701,7 @@
                         <input type="number" name="target_value">
                     </div>
                     <label>Срок выполнения (в часах, 0 - бессрочно)</label>
-                    <input type="number" name="duration_days" value="0">
+                    <input type="number" name="duration_hours" value="0">
                     <label>Статус</label>
                     <select name="is_active">
                         <option value="true">Активен</option>
@@ -763,7 +763,7 @@
                         <input type="number" name="target_value">
                     </div>
                     <label>Срок выполнения (в часах, 0 - бессрочно)</label>
-                    <input type="number" name="duration_days" value="0">
+                    <input type="number" name="duration_hours" value="0">
                     <label>Статус</label>
                     <select name="is_active">
                         <option value="true">Активен</option>
