--- a/public/admin.html
+++ b/public/admin.html
@@ -2165,7 +2165,7 @@
                     form.elements['action_url'].value = quest.action_url || '';
                     form.elements['twitch_period'].value = twitchPeriod;
                     form.elements['target_value'].value = quest.target_value || '';
-                    form.elements['duration_days'].value = quest.duration_days || 0;
+                    form.elements['duration_hours'].value = quest.duration_hours || 0;
                     form.elements['is_active'].value = quest.is_active.toString();
                     form.elements['is_repeatable'].value = quest.is_repeatable.toString();
                     updateQuestFormUI(form);
