--- a/public/roulette.html
+++ b/public/roulette.html
@@ -194,9 +194,9 @@
 </head>
 <body>
 
-    <audio id="sound-start" src="/sounds/start.mp3"></audio>
-    <audio id="sound-tick" src="/sounds/tick.mp3" loop></audio>
-    <audio id="sound-win" src="/sounds/win.mp3"></audio>
+    <audio id="sound-start" src="/public/sounds/start.mp3"></audio>
+    <audio id="sound-tick" src="/public/sounds/tick.mp3" loop></audio>
+    <audio id="sound-win" src="/public/sounds/win.mp3"></audio>
 
     <div class="roulette-wrapper" id="roulette-wrapper">
         <div class="roulette-container">
